--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img src="img/built/fitness_page_screen.jpg" alt="fitness page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/fitness" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/fitness" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/fitness" target="_blank"><i class="fa fa-github"></i></a>
             <p>Fitness Club webpage</p>
           </div>
@@ -69,7 +69,7 @@
             <img src="img/built/hangman_page_screen.jpg" alt="hangman page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/hangman" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/hangman" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/hangman" target="_blank"><i class="fa fa-github"></i></a>
             <p>Hangman game in JavaScript</p>
           </div>
@@ -82,7 +82,7 @@
             <img src="img/built/photographer_page_screen.jpg" alt="photographer page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/photographer" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/photographer" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/photographer" target="_blank"><i class="fa fa-github"></i></a>
             <p>Photographer page</p>
           </div>
@@ -95,7 +95,7 @@
             <img src="img/built/photo_gallery_screen.jpg" alt="photo gallery page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/photo_gallery" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/photo_gallery" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/photo_gallery" target="_blank"><i class="fa fa-github"></i></a>
             <p>Photo gallery PSD to HTML</p>
           </div>
@@ -111,7 +111,7 @@
             <img src="img/built/move_page_screen.jpg" alt="move page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/move" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/move" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/move" target="_blank"><i class="fa fa-github"></i></a>
             <p>PSD to HTML</p>
           </div>
@@ -124,7 +124,7 @@
             <img src="img/built/ad_it_page_screen.jpg" alt="advertise_it page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/ad_it" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/ad_it" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/ad_it" target="_blank"><i class="fa fa-github"></i></a>
             <p>Single page business website</p>
           </div>
@@ -137,7 +137,7 @@
             <img src="img/built/travel_page_screen.jpg" alt="travel page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/travel" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/travel" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/travel" target="_blank"><i class="fa fa-github"></i></a>
             <p>PSD to HTML</p>
           </div>
@@ -150,7 +150,7 @@
             <img src="img/built/coffee_page_screen.jpg" alt="coffee page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/coffee" class="btn-link" target="_blank"><i class="fa fa-link"></i></a>
+            <a href="https://fryderykg.github.io/pages/coffee" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/coffee" target="_blank"><i class="fa fa-github"></i></a>
             <p>PSD to HTML</p>
           </div>
