--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Index</title>
   <link rel="stylesheet" href="css/build.css">
 </head>
 <body>
+<!-- NAVIGATION -->
 <header class="row" id="myHeader">
   <nav class="container">
     <ul class="topnav" id="myTopnav">
@@ -42,6 +43,7 @@
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="portfolio" id="portfolio">
   <div class="container">
     <h2>portfolio</h2>
@@ -170,30 +172,36 @@
     <div class="row">
       <!-- 1st item-->
       <div class="col-xs-6 col-sm-6 col-md-3">
-        <div class="technologies-item">
-          <div class="icon"><i class="fa fa-html5"></i></div>
-          <h3>HTML 5</h3>
+        <div class="flip3d">
+          <div class="front"><i class="fa fa-html5"></i></div>
+          <div class="back">HTML</div>
         </div>
       </div>
       <!-- 2nd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><i class="fa fa-css3"></i></div>
-          <h3>CSS 3</h3>
+          <div class="flip3d">
+            <div class="front"><i class="fa fa-css3"></i></div>
+            <div class="back">CSS 3</div>
+          </div>
         </div>
       </div>
       <!-- 3rd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/bootstrap.png" alt="bootstrap logo"></div>
-          <h3>Bootstrap</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/bootstrap.png" alt="bootstrap logo"></div>
+            <div class="back small">Bootstrap</div>
+          </div>
         </div>
       </div>
       <!-- 4th item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><i class="ionicons ion-social-javascript"></i></div>
-          <h3>JavaScript</h3>
+          <div class="flip3d">
+            <div class="front"><i class="ionicons ion-social-javascript"></i></div>
+            <div class="back small">JavaScript</div>
+          </div>
         </div>
       </div>
     </div>
@@ -202,29 +210,37 @@
       <!-- 1st item-->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><i class="ionicons ion-social-sass"></i></div>
-          <h3>Sass</h3>
+          <div class="flip3d">
+            <div class="front"><i class="ionicons ion-social-sass"></i></div>
+            <div class="back">Sass</div>
+          </div>
         </div>
       </div>
       <!-- 2nd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/grunt.png" alt="grunt logo"></div>
-          <h3>Grunt</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/grunt.png" alt="grunt logo"></div>
+            <div class="back">Grunt</div>
+          </div>
         </div>
       </div>
       <!-- 3rd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/jquery.png" alt="jQuery logo"></div>
-          <h3>jQuery</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/jquery.png" alt="jQuery logo"></div>
+            <div class="back">jQuery</div>
+          </div>
         </div>
       </div>
       <!-- 4th item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/rwd.png" alt="rwd logo"></div>
-          <h3>RWD</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/rwd.png" alt="rwd logo"></div>
+            <div class="back">RWD</div>
+          </div>
         </div>
       </div>
     </div>
@@ -234,44 +250,53 @@
       <!-- 1st item-->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><i class="ionicons ion-social-python"></i></div>
-          <h3>Python</h3>
+          <div class="flip3d">
+            <div class="front"><i class="ionicons ion-social-python"></i></div>
+            <div class="back">Python</div>
+          </div>
         </div>
       </div>
       <!-- 2nd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/django.png" alt="django logo"></div>
-          <h3>Django</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/django.png" alt="django logo"></div>
+            <div class="back">Django</div>
+          </div>
         </div>
       </div>
       <!-- 3rd item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><i class="fa fa-github"></i></div>
-          <h3>Git</h3>
+          <div class="flip3d">
+            <div class="front"><i class="fa fa-github"></i></div>
+            <div class="back">Git</div>
+          </div>
         </div>
       </div>
       <!-- 4th item -->
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="technologies-item">
-          <div class="icon"><img src="img/built/ajax.png" alt="ajax logo"></div>
-          <h3>Ajax</h3>
+          <div class="flip3d">
+            <div class="front"><img src="img/built/ajax.png" alt="ajax logo"></div>
+            <div class="back">Ajax</div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
+<!-- CONTACT -->
 <section class="contact" id="contact">
   <h2 class="light">contact</h2>
   <div class="separator"><span>×××</span></div>
   <div class="section-subtitle">I'LL BE GLAD TO ANSWER YOUR QUESTIONS!</div>
 
-  <form action="#">
+  <form action="send-email.php" method="POST" name="contactform">
     <fieldset>
       <input type="text" name="name" placeholder="Name">
       <input type="email" name="email" placeholder="Email address">
-      <input type="text" name="subject" placeholder="Subject">
       <textarea name="message" id="message" rows="7" placeholder="Your message"></textarea>
       <input type="submit" id="submit" value="Send Message" class="button">
     </fieldset>
