move social media icons to contact section

--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
     <p>I spent several last months on learning coding. Last three months on intensive Front-End bootcamp.</p>
     <p>I am looking for my first job, to start my career and to learn more from experienced colleagues.</p>
     <p>To learn more about me and my skills, please browse this portfolio website.</p>
-    <div class="row">
-      <div class="icon"><a href="https://github.com/fryderykg" target="_blank"><i class="fa fa-github"></i></a></div>
-      <div class="icon"><a href="https://pl.linkedin.com/in/fryderyk-grodzinski" target="_blank"><i class="fa fa-linkedin"></i></a></div>
-    </div>
   </div>
 </section>
 
@@ -301,11 +297,15 @@
       <input type="submit" id="submit" value="Send Message" class="button">
     </fieldset>
   </form>
-  <div class="footer">
-    <p>Made with passion by
-      <a href="https://fryderykg.github.io">Fryderyk Grodziński</a>
-    </p>
+  <!-- Social icons-->
+  <div class="social">
+    <div class="section-subtitle">You can find me as well on:</div>
+    <a href="https://github.com/fryderykg" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://pl.linkedin.com/in/fryderyk-grodzinski" target="_blank"><i class="fa fa-linkedin"></i></a>
   </div>
+  <footer>
+    <p>&copy Fryderyk Grodziński</p>
+  </footer>
 </section>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
