add hover to portfolio images

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <div class="section-subtitle">a couple of words about me</div>
     <p>My name is Fryderyk, I would like to become Junior Frond-End developer.</p>
     <p>I spent several last months on learning coding. Last three months on intensive Front-End bootcamp.</p>
-    <p>I am looking for my first job, to start my career and to learn more from experienced colleagues.</p>
-    <p>To learn more about me and my skills, please browse this portfolio website.</p>
+    <p>I am looking for my first job to start my career and to learn more from experienced colleagues.</p>
+    <p>If you want to learn more about me and my skills, please browse this portfolio website.</p>
   </div>
 </section>
 
@@ -56,7 +56,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/fitness" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/fitness" target="_blank"><i class="fa fa-github"></i></a>
-            <p>Fitness Club webpage</p>
+            <p>Fitness Club</p>
           </div>
         </div>
       </div>
@@ -69,7 +69,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/hangman" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/hangman" target="_blank"><i class="fa fa-github"></i></a>
-            <p>Hangman game in JavaScript</p>
+            <p>Hangman in JavaScript</p>
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/photo_gallery" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/photo_gallery" target="_blank"><i class="fa fa-github"></i></a>
-            <p>Photo gallery PSD to HTML</p>
+            <p>Photo Gallery</p>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/move" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/move" target="_blank"><i class="fa fa-github"></i></a>
-            <p>PSD to HTML</p>
+            <p>Sports</p>
           </div>
         </div>
       </div>
@@ -124,7 +124,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/ad_it" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/ad_it" target="_blank"><i class="fa fa-github"></i></a>
-            <p>Single page business website</p>
+            <p>Creative Agency</p>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/travel" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/travel" target="_blank"><i class="fa fa-github"></i></a>
-            <p>PSD to HTML</p>
+            <p>Travel Office</p>
           </div>
         </div>
       </div>
@@ -150,7 +150,7 @@
           <div>
             <a href="https://fryderykg.github.io/pages/coffee" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
             <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/coffee" target="_blank"><i class="fa fa-github"></i></a>
-            <p>PSD to HTML</p>
+            <p>About Coffee</p>
           </div>
         </div>
       </div>
