update links in portfolio

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
       <!-- 1st item-->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/fitness" target="_blank">
+          <a href="pages/fitness" target="_blank">
             <img src="img/built/fitness_page_screen.jpg" alt="fitness page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/fitness" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/fitness" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/fitness" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/fitness" target="_blank"><i class="fa fa-github"></i></a>
             <p>Fitness Club</p>
           </div>
         </div>
@@ -63,12 +63,12 @@
       <!-- 2nd item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/hangman" target="_blank">
+          <a href="games/hangman" target="_blank">
             <img src="img/built/hangman_page_screen.jpg" alt="hangman page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/hangman" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/hangman" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="games/hangman" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/hangman" target="_blank"><i class="fa fa-github"></i></a>
             <p>Hangman in JavaScript</p>
           </div>
         </div>
@@ -76,12 +76,12 @@
       <!-- 3rd item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/photographer" target="_blank">
+          <a href="pages/photographer" target="_blank">
             <img src="img/built/photographer_page_screen.jpg" alt="photographer page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/photographer" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/photographer" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/photographer" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/photographer" target="_blank"><i class="fa fa-github"></i></a>
             <p>Photographer page</p>
           </div>
         </div>
@@ -89,12 +89,12 @@
       <!-- 4th item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/photo_gallery" target="_blank">
+          <a href="pages/photo_gallery" target="_blank">
             <img src="img/built/photo_gallery_screen.jpg" alt="photo gallery page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/photo_gallery" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/photo_gallery" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/photo_gallery" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/photo_gallery" target="_blank"><i class="fa fa-github"></i></a>
             <p>Photo Gallery</p>
           </div>
         </div>
@@ -105,12 +105,12 @@
       <!-- 1st item-->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/move" target="_blank">
+          <a href="pages/move" target="_blank">
             <img src="img/built/move_page_screen.jpg" alt="move page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/move" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/move" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/move" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/move" target="_blank"><i class="fa fa-github"></i></a>
             <p>Sports</p>
           </div>
         </div>
@@ -118,12 +118,12 @@
       <!-- 2nd item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/ad_it" target="_blank">
+          <a href="pages/ad_it" target="_blank">
             <img src="img/built/ad_it_page_screen.jpg" alt="advertise_it page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/ad_it" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/ad_it" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/ad_it" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/ad_it" target="_blank"><i class="fa fa-github"></i></a>
             <p>Creative Agency</p>
           </div>
         </div>
@@ -131,25 +131,25 @@
       <!-- 3rd item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/travel" target="_blank">
+          <a href="pages/travel" target="_blank">
             <img src="img/built/travel_page_screen.jpg" alt="travel page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/travel" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/travel" target="_blank"><i class="fa fa-github"></i></a>
-            <p>Travel Office</p>
+            <a href="pages/travel" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/travel" target="_blank"><i class="fa fa-github"></i></a>
+            <p>Travel Agency</p>
           </div>
         </div>
       </div>
       <!-- 4th item -->
       <div class="col-xs-12 col-sm-6 col-md-3">
         <div class="portfolio-item">
-          <a href="https://fryderykg.github.io/pages/coffee" target="_blank">
+          <a href="pages/coffee" target="_blank">
             <img src="img/built/coffee_page_screen.jpg" alt="coffee page screen">
           </a>
           <div>
-            <a href="https://fryderykg.github.io/pages/coffee" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
-            <a href="https://github.com/fryderykg/fryderykg.github.io/tree/master/pages/coffee" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="pages/coffee" class="btn-link" target="_blank"><i class="fa fa-eye"></i></a>
+            <a href="https://github.com/fryderykg/web-pages/tree/master/coffee" target="_blank"><i class="fa fa-github"></i></a>
             <p>About Coffee</p>
           </div>
         </div>
