add arrow in about me section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <p>I am looking for my first job to start my career and to learn more from experienced colleagues.</p>
     <p>If you want to learn more about me and my skills, please browse this portfolio website.</p>
   </div>
+  <a class="menu" href="#portfolio"><i class="fa fa-angle-down"></i></a>
 </section>
 
 <!-- PORTFOLIO -->
