add ribbon in about me section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li class="menu-link"><a class="menu" href="#about_me">about me</a></li>
       <li class="menu-link"><a class="menu" href="#portfolio">portfolio</a></li>
       <li>
-        <a class="" href="#"><img src="img/built/logo.png" alt="logo"></a>
+        <a class="menu" href="#about_me"><img src="img/built/logo.png" alt="logo"></a>
       </li>
       <li class="menu-link"><a class="menu" href="#technologies">technologies</a></li>
       <li class="menu-link"><a class="menu" href="#contact">contact</a></li>
@@ -32,6 +32,20 @@
     <h2 id="welcome">welcome</h2>
     <div class="separator"><span>×××</span></div>
     <div class="section-subtitle">a couple of words about me</div>
+    <div class="ribbon">
+      <span class="dots dot1"></span>
+      <span class="dots dot2"></span>
+      <span class="dots dot3"></span>
+      <span class="dots dot4"></span>
+      <span class="dots dot5"></span>
+      <span class="dots dot6"></span>
+      <span class="dots dot7"></span>
+      <span class="dots dot8"></span>
+      <h3 class="ribbon-content">
+        <span>I create my future</span>
+      </h3>
+
+    </div>
     <p>My name is Fryderyk, I would like to become Junior Frond-End developer.</p>
     <p>I spent several last months on learning coding. Last three months on intensive Front-End bootcamp.</p>
     <p>I am looking for my first job to start my career and to learn more from experienced colleagues.</p>
