--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
       <div class="col-xs-6 col-sm-6 col-md-3">
         <div class="flip3d">
           <div class="front"><i class="fa fa-html5"></i></div>
-          <div class="back">HTML</div>
+          <div class="back">HTML5</div>
         </div>
       </div>
       <!-- 2nd item -->
@@ -224,7 +224,7 @@
         <div class="technologies-item">
           <div class="flip3d">
             <div class="front"><i class="fa fa-css3"></i></div>
-            <div class="back">CSS 3</div>
+            <div class="back">CSS3</div>
           </div>
         </div>
       </div>
