change size of portfolio overlay minor corrections

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <a href="pages/travel" target="_blank">
             <div class="item-text">
               <p>Technologies:</p>
-              <p>HTML, CSS, RWD</p>
+              <p>HTML, CSS</p>
             </div>
             <img src="img/built/travel_page_screen.jpg" alt="travel page screen">
           </a>
